# school_mgt_system

./: README.md  requirements.txt
sms/: .gitignore  .pyproject.toml.swp  pyproject.toml  requirements.txt
sms/school/: .env  db.sqlite3
sms/school/school/: .urls.py.swp  settings.py
sms/school/students/: .models.py.swp  .urls.py.swp  .views.py.swp  forms.py  models.py  urls.py  views.py
sms/school/students/migrations/: .0001_initial.py.swp  0001_initial.py
sms/school/students/static/css/: main.css
sms/school/students/templates/students/: .index.html.swp  add.html  base.html  index.html  landing.html
