[tool.poetry]
name = "school-mgt-sys"
version = "0.1.0"
description = ""
authors = ["jabir254 <jabirkullow@gmail.com>"]
readme = "README.md"
packages = [{include = "school_mgt_sys"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
